--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.3",
     "expo": "~42.0.1",
+    "expo-av": "~9.2.3",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
